# docubleach

./: README.md  pyproject.toml
.github/workflows/: pre-commit-actions.yml  unit-tests.yml
docubleach/: bleach.py
ms_office_macro_bleach/: bleach.py
tests/: test_bff_files.py  test_file_validation.py  test_ooxml_files.py  test_ooxml_hyperlink_detection.py
tests/test_files/: excel_template.xltx  powerpoint_presentation_with_macros.pptm  powerpoint_show.ppsx  powerpoint_show_with_macros.ppsm  powerpoint_template_with_macros.potm  valid_file_without_macros.docx
tests/test_files/bff_files/: legacy_excel_spreadsheet.xls  legacy_word_document.doc
tests/test_files/ooxml_files/: excel_spreadsheet.xlsx  excel_spreadsheet_with_macros.xlsm  excel_template_with_macros.xltm  powerpoint_presentation.pptx  powerpoint_template.potx  word_document.docx  word_document_with_macros.docm  word_template.dotx  word_template_with_macros.dotm
tests/test_files/ooxml_hyperlink_detection/: excel_spreadsheet.xlsx  excel_spreadsheet_with_macros.xlsm  excel_template.xltx  excel_template_with_macros.xltm  powerpoint_presentation.pptx  powerpoint_presentation_with_macros.pptm  powerpoint_show.ppsx  powerpoint_show_with_macros.ppsm  powerpoint_template.potx  powerpoint_template_with_macros.potm  word_document.docx  word_document_with_macros.docm  word_template.dotx  word_template_with_macros.dotm
tests/test_files/validation_tests/: invalid_file_type.txt  valid_file_with_macros.docm
