[tool.poetry]
name = "ms-office-macro-bleach"
version = "0.1.0"
description = "Tool to purge and remove all macro and dynamic content from an MS Office file"
authors = ["Patterbear <benjamin.mcgregor2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
