[tool.poetry]
name = "ms-office-macro-bleach"
version = "0.1.0"
description = "Tool to purge and remove all macro and dynamic content from an MS Office file"
authors = ["Patterbear"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywin32 = {version = "^306", platform = "win32"}


[tool.poetry.scripts]
bleach = "ms_office_macro_bleach.bleach:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
