[tool.poetry]
name = "docubleach"
version = "0.1.2"
description = "Tool to purge and remove all macro and dynamic content from an MS Office file"
authors = ["Patterbear"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
olefile = "^0.47"
oletools = "^0.60.2"


[tool.poetry.scripts]
docubleach = "docubleach.bleach:main"


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 95
